--- a/jobapp/templates/Employer/postjob.html
+++ b/jobapp/templates/Employer/postjob.html
@@ -2,46 +2,54 @@
 {% load static %}
 
 {% block title %}
-Home emp
+Post a Job
 {% endblock %}
 
 
 
-
 {% block body %}
+
 <section>
-    <div class="container">
+    <div class="container mt-5">
         <div class="row mt-5">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-8">
-                <h3 class=" mb-3" style="color:rgb(0, 140, 114);">Active Jobs</h3>
-            </div>
-            <div class="col-lg-2"></div>
-        </div>
-        <div class="row mt-5">
-            <div class="col-lg-2"></div>
-            <div class="col-lg-8">
-                <div class="row row-cols-1 row-cols-md-3 g-4">
-                    <div class="col">
-                        <div class="card card1 h-100  p-2 mb-2 bg-body-tertiary rounded">
-                          <div class="card-body">
-                            
-                            <h5 class="card-title" style="color: rgb(0, 0, 0);">Python Developer</h5>
-                            <h6 style="color: rgb(129, 129, 129);">Vaccancies: 10</h6>
-                            <h6 style="color: rgb(129, 129, 129);">Applied: 15</h6>
-                            <h6 style="color: rgb(129, 129, 129);">Kochi, Kerala</h6>
-                            <a href="{% url 'empjobdetails' %}"><button class="btn btn-sm mt-lg-2 mb-0 " type="button" style="color:rgb(0, 140, 114);" >Job details</button></a>
-                            <a href="{% url 'applicants' %}"><button class="btn btn-sm mt-lg-2 mb-0 " type="button" style="color:rgb(0, 140, 114);" >View applications</button></a>
-                            
-                          </div>
-                        </div>
+            <div class="col-lg-3"></div>
+            <div class="col-lg-6">
+                <div class="row">
+                    <h3 style="color: rgb(0, 140, 114);">Post a Job</h3>
+                </div>
+                <div class="row mt-5">
+                    <div class="box mt-2 mb-2" style="text-align:justify;">
+                        <h6 style="color: rgb(0, 0, 0);" >Job title: <input type="text"  class="form-control "> </h6>
+                        <h6 style="color: rgb(0, 0, 0);" >Company name: <input type="number"  class="form-control"></h6>
+                        <h6 style="color: rgb(0, 0, 0);" >location: <input type="text"  class="form-control "> </h6>
+                        <h6 style="color: rgb(0, 0, 0);" >Salary range: <input type="text"  class="form-control"> </h6>
+                        <h6 style="color: rgb(0, 0, 0);" >Experience required: <input type="text"  class="form-control"> </h6>
+                        <h6 style="color: rgb(0, 0, 0);" >Job type: <input type="text"  class="form-control "> </h6>
+                        <h6 style="color: rgb(0, 0, 0);" >Job shift: <input type="text"  class="form-control"> </h6>
+                        <h6 style="color: rgb(0, 0, 0);" >Job description: <textarea type="text"  class="form-control"></textarea> </h6>
+                        <h6 style="color: rgb(0, 0, 0);" >No of openings: <input type="text"  class="form-control"> </h6>
+
+
+
+
+
+
                     </div>
+                    
+                </div>
+                
+                
+                
+                <div class="row mt-4">
+                    <button type="button" class="btn sp mb-4 btn-sm w-25 ms-2"  id="liveAlertBtn" style="color: rgb(0, 140, 114);border: 1px solid rgb(0, 140, 114);">Post</button>
+                    <div id="liveAlertPlaceholder"></div>
                 </div>
             </div>
-            <div class="col-lg-2"></div>
+            <div class="col-lg-3"></div>
         </div>
     </div>
 </section>
+
 
 <hr class="mt-5">
 <section id="sectionlast">
@@ -95,7 +103,6 @@ Home emp
 </section> 
 
 
-
 <style>
     button.sp{
     transition: box-shadow 0.3s ease-in-out;
@@ -119,6 +126,33 @@ Home emp
     box-shadow: 0px 0px 10px rgb(0, 140, 114, .5);
         
   }
+  img {
+  border-radius: 50%;
+  }
+
 </style>
+
+<script>
+    const alertPlaceholder = document.getElementById('liveAlertPlaceholder')
+  const appendAlert = (message, type) => {
+    const wrapper = document.createElement('div')
+    wrapper.innerHTML = [
+      `<div class="alert alert-${type} alert-dismissible" role="alert">`,
+      `   <div>${message}</div>`,
+      '   <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>',
+      '</div>'
+    ].join('')
+  
+    alertPlaceholder.append(wrapper)
+  }
+  
+  const alertTrigger = document.getElementById('liveAlertBtn')
+  if (alertTrigger) {
+    alertTrigger.addEventListener('click', () => {
+      appendAlert('Job Posted Successfully!', 'success')
+    })
+  }
+  </script>
+  
 
 {% endblock %}
