--- a/jobapp/templates/Jobseeker/home.html
+++ b/jobapp/templates/Jobseeker/home.html
@@ -56,7 +56,7 @@ Home
                             <h6 style="color: rgb(129, 129, 129);">(0-2)year experience</h6>
                             <h6 style="color: rgb(129, 129, 129);">Kochi, Kerala</h6>
                             <label class="mt-1 mb-1" style="background-color: rgb(238, 238, 238);"><i class="fa fa-inr"></i>25000 - <i class="fa fa-inr"></i>35000</label>
-                            <label class="mt-1 mb-1" style="background-color: rgb(214, 255, 208);"><i class="fa fa-briefcase"></i> Full Time</label><br>
+                            <label class="mt-1 mb-1" style="background-color: rgb(228, 255, 224)"><i class="fa fa-briefcase"></i> Full Time</label><br>
                             <label class="mt-1 mb-1" style="background-color: rgb(238,238,238);"><i class="fa fa-clock"></i>Day Shift</label><br>
                             <a href="{% url 'jobdetails' %}"><button class="btn btn-sm mt-lg-2 mb-0 " type="button" style="color:rgb(0, 140, 114);" >Apply now</button></a>
                             
@@ -72,7 +72,7 @@ Home
                             <h6 style="color: rgb(129, 129, 129);">(0-1)year experience</h6>
                             <h6 style="color: rgb(129, 129, 129);">Kochi, Kerala</h6>
                             <label class="mt-1 mb-1" style="background-color: rgb(238, 238, 238);"><i class="fa fa-inr"></i>25000 - <i class="fa fa-inr"></i>35000</label>
-                            <label class="mt-1 mb-1" style="background-color: rgb(214, 255, 208);"><i class="fa fa-briefcase"></i> Remote</label><br>
+                            <label class="mt-1 mb-1" style="background-color: rgb(228, 255, 224);"><i class="fa fa-briefcase"></i> Remote</label><br>
                             <label class="mt-1 mb-1" style="background-color: rgb(238,238,238);"><i class="fa fa-clock"></i> Day Shift</label><br>
                             <a href=""><button class="btn btn-sm mt-lg-2 mb-0 " type="button" style="color:rgb(0, 140, 114);" >Apply now</button></a>
                             
@@ -88,7 +88,7 @@ Home
                             <h6 style="color: rgb(129, 129, 129);">Freshers</h6>
                             <h6 style="color: rgb(129, 129, 129);">Kochi, Kerala</h6>
                             <label class="mt-1 mb-1" style="background-color: rgb(238, 238, 238);"><i class="fa fa-inr"></i>10000 - <i class="fa fa-inr"></i>15000</label>
-                            <label class="mt-1 mb-1" style="background-color: rgb(214, 255, 208);"><i class="fa fa-briefcase"></i> Full Time</label><br>
+                            <label class="mt-1 mb-1" style="background-color: rgb(228, 255, 224);"><i class="fa fa-briefcase"></i> Full Time</label><br>
                             <label class="mt-1 mb-1" style="background-color: rgb(238,238,238);"><i class="fa fa-clock"></i> Day Shift</label><br>
                             <a href=""><button class="btn btn-sm mt-lg-2 mb-0 " type="button" style="color:rgb(0, 140, 114);" >Apply now</button></a>
                             
@@ -104,7 +104,7 @@ Home
                             <h6 style="color: rgb(129, 129, 129);">(0-1)year experience</h6>
                             <h6 style="color: rgb(129, 129, 129);">Kochi, Kerala</h6>
                             <label class="mt-1 mb-1" style="background-color: rgb(238, 238, 238);"><i class="fa fa-inr"></i>25000 - <i class="fa fa-inr"></i>30000</label>
-                            <label class="mt-1 mb-1" style="background-color: rgb(214, 255, 208);"><i class="fa fa-briefcase"></i> Full Time</label><br>
+                            <label class="mt-1 mb-1" style="background-color: rgb(228, 255, 224);"><i class="fa fa-briefcase"></i> Full Time</label><br>
                             <label class="mt-1 mb-1" style="background-color: rgb(238,238,238);"><i class="fa fa-clock"></i> Day Shift</label><br>
                             <a href=""><button class="btn btn-sm mt-lg-2 mb-0 " type="button" style="color:rgb(0, 140, 114);" >Apply now</button></a>
                             
@@ -120,7 +120,7 @@ Home
                             <h6 style="color: rgb(129, 129, 129);">(0-2)year experience</h6>
                             <h6 style="color: rgb(129, 129, 129);">Kochi, Kerala</h6>
                             <label class="mt-1 mb-1" style="background-color: rgb(238, 238, 238);"><i class="fa fa-inr"></i>25000 - <i class="fa fa-inr"></i>35000</label>
-                            <label class="mt-1 mb-1" style="background-color: rgb(214, 255, 208);"><i class="fa fa-briefcase"></i> Full Time</label><br>
+                            <label class="mt-1 mb-1" style="background-color: rgb(228, 255, 224);"><i class="fa fa-briefcase"></i> Full Time</label><br>
                             <label class="mt-1 mb-1" style="background-color: rgb(238,238,238);"><i class="fa fa-clock"></i> Day Shift</label><br>
                             <a href=""><button class="btn btn-sm mt-lg-2 mb-0 " type="button" style="color:rgb(0, 140, 114);" >Apply now</button></a>
                             
@@ -136,7 +136,7 @@ Home
                             <h6 style="color: rgb(129, 129, 129);">(0-2)year experience</h6>
                             <h6 style="color: rgb(129, 129, 129);">Kochi, Kerala</h6>
                             <label class="mt-1 mb-1" style="background-color: rgb(238, 238, 238);"><i class="fa fa-inr"></i>25000 - <i class="fa fa-inr"></i>35000</label>
-                            <label class="mt-1 mb-1" style="background-color: rgb(214, 255, 208);"><i class="fa fa-briefcase"></i> Remote</label><br>
+                            <label class="mt-1 mb-1" style="background-color: rgb(228, 255, 224);"><i class="fa fa-briefcase"></i> Remote</label><br>
                             <label class="mt-1 mb-1" style="background-color: rgb(238,238,238);"><i class="fa fa-clock"></i> Day Shift</label><br>
                             <a href=""><button class="btn btn-sm mt-lg-2 mb-0 " type="button" style="color:rgb(0, 140, 114);" >Apply now</button></a>
                             
@@ -184,7 +184,7 @@ Home
                             <h6 style="color: rgb(129, 129, 129);">(0-1)year experience</h6>
                             <h6 style="color: rgb(129, 129, 129);">Banglore, India</h6>
                             <label class="mt-1 mb-1" style="background-color: rgb(238, 238, 238);"><i class="fa fa-inr"></i>25000 - <i class="fa fa-inr"></i>30000</label>
-                            <label class="mt-1 mb-1" style="background-color: rgb(214, 255, 208);"><i class="fa fa-briefcase"></i> Full Time</label><br>
+                            <label class="mt-1 mb-1" style="background-color: rgb(228, 255, 224);"><i class="fa fa-briefcase"></i> Full Time</label><br>
                             <label class="mt-1 mb-1" style="background-color: rgb(238,238,238);"><i class="fa fa-clock"></i> Day Shift</label><br>
                             <a href=""><button class="btn btn-sm mt-lg-2 mb-0 " type="button" style="color:rgb(0, 140, 114);" >Apply now</button></a>
                             
@@ -200,7 +200,7 @@ Home
                             <h6 style="color: rgb(129, 129, 129);">(0-2)year experience</h6>
                             <h6 style="color: rgb(129, 129, 129);">Chennai, India</h6>
                             <label class="mt-1 mb-1" style="background-color: rgb(238, 238, 238);"><i class="fa fa-inr"></i>25000 - <i class="fa fa-inr"></i>30000</label>
-                            <label class="mt-1 mb-1" style="background-color: rgb(214, 255, 208);"><i class="fa fa-briefcase"></i> Part Time</label><br>
+                            <label class="mt-1 mb-1" style="background-color: rgb(228, 255, 224);"><i class="fa fa-briefcase"></i> Part Time</label><br>
                             <label class="mt-1 mb-1" style="background-color: rgb(238,238,238);"><i class="fa fa-clock"></i> Day Shift</label><br>
                             <a href=""><button class="btn btn-sm mt-lg-2 mb-0 " type="button" style="color:rgb(0, 140, 114);" >Apply now</button></a>
                             
@@ -216,7 +216,7 @@ Home
                             <h6 style="color: rgb(129, 129, 129);">(0-1)year experience</h6>
                             <h6 style="color: rgb(129, 129, 129);">Banglore, India</h6>
                             <label class="mt-1 mb-1" style="background-color: rgb(238, 238, 238);"><i class="fa fa-inr"></i>25000 - <i class="fa fa-inr"></i>30000</label>
-                            <label class="mt-1 mb-1" style="background-color: rgb(214, 255, 208);"><i class="fa fa-briefcase"></i> Full Time</label><br>
+                            <label class="mt-1 mb-1" style="background-color: rgb(228, 255, 224);"><i class="fa fa-briefcase"></i> Full Time</label><br>
                             <label class="mt-1 mb-1" style="background-color: rgb(238,238,238);"><i class="fa fa-clock"></i> Day Shift</label><br>
                             <a href=""><button class="btn btn-sm mt-lg-2 mb-0 " type="button" style="color:rgb(0, 140, 114);" >Apply now</button></a>
                             
@@ -232,7 +232,7 @@ Home
                             <h6 style="color: rgb(129, 129, 129);">(0-1)year experience</h6>
                             <h6 style="color: rgb(129, 129, 129);">Kerala, India</h6>
                             <label class="mt-1 mb-1" style="background-color: rgb(238, 238, 238);"><i class="fa fa-inr"></i>25000 - <i class="fa fa-inr"></i>30000</label>
-                            <label class="mt-1 mb-1" style="background-color: rgb(214, 255, 208);"><i class="fa fa-briefcase"></i> Full Time</label><br>
+                            <label class="mt-1 mb-1" style="background-color: rgb(228, 255, 224);"><i class="fa fa-briefcase"></i> Full Time</label><br>
                             <label class="mt-1 mb-1" style="background-color: rgb(238,238,238);"><i class="fa fa-clock"></i> Day Shift</label><br>
                             <a href=""><button class="btn btn-sm mt-lg-2 mb-0 " type="button" style="color:rgb(0, 140, 114);" >Apply now</button></a>
                             
@@ -248,7 +248,7 @@ Home
                             <h6 style="color: rgb(129, 129, 129);">Freshers</h6>
                             <h6 style="color: rgb(129, 129, 129);">Banglore, India</h6>
                             <label class="mt-1 mb-1" style="background-color: rgb(238, 238, 238);"><i class="fa fa-inr"></i>20000 - <i class="fa fa-inr"></i>30000</label>
-                            <label class="mt-1 mb-1" style="background-color: rgb(214, 255, 208);"><i class="fa fa-briefcase"></i> Remote</label><br>
+                            <label class="mt-1 mb-1" style="background-color: rgb(228, 255, 224);"><i class="fa fa-briefcase"></i> Remote</label><br>
                             <label class="mt-1 mb-1" style="background-color: rgb(238,238,238);"><i class="fa fa-clock"></i> Day Shift</label><br>
                             <a href=""><button class="btn btn-sm mt-lg-2 mb-0 " type="button" style="color:rgb(0, 140, 114);" >Apply now</button></a>
                             
@@ -264,7 +264,7 @@ Home
                             <h6 style="color: rgb(129, 129, 129);">(0-2)year experience</h6>
                             <h6 style="color: rgb(129, 129, 129);">Kochi, Kerala</h6>
                             <label class="mt-1 mb-1" style="background-color: rgb(238, 238, 238);"><i class="fa fa-inr"></i>25000 - <i class="fa fa-inr"></i>35000</label>
-                            <label class="mt-1 mb-1" style="background-color: rgb(214, 255, 208);"><i class="fa fa-briefcase"></i> Full Time</label><br>
+                            <label class="mt-1 mb-1" style="background-color: rgb(228, 255, 224);"><i class="fa fa-briefcase"></i> Full Time</label><br>
                             <label class="mt-1 mb-1" style="background-color: rgb(238,238,238);"><i class="fa fa-clock"></i> Day Shift</label><br>
                             <a href="{% url 'jobdetails' %}"><button class="btn btn-sm mt-lg-2 mb-0 " type="button" style="color:rgb(0, 140, 114);" >Apply now</button></a>
                             
