--- a/jobapp/templates/Jobseeker/profile.html
+++ b/jobapp/templates/Jobseeker/profile.html
@@ -17,28 +17,46 @@ Profile
                 <div class="row">
                     <div class="box mt-5 mb-3" style="text-align:justify;">
                         <img src="{% static 'images/avatar.png' %}" alt="Avatar" style="width:200px">
-                        <h2 class="mt-3" style="color: rgb(0, 140, 114);" >Alex Jhonson</h2>
+                        <h3 class="mt-3" style="color: rgb(0, 140, 114);" >Alex Jhonson</h3>
                     </div>
 
                 </div>
                 <div class="row">
                     <div class="box mt-2 mb-2" style="text-align:justify;">
-                        <h5 style="color: rgb(0, 0, 0);" ><i class="fa fa-envelope"></i> alex55@gmail.com</h5>
-                        <h5 style="color: rgb(0, 0, 0);" ><i class="fa fa-phone"></i> 9784563212</h5>
-                        <h5 style="color: rgb(0, 0, 0);" ><i class="fa fa-location"></i> Alappuzha, Kerala</h5>
+                        <h6 style="color: rgb(0, 0, 0);" ><i class="fa fa-envelope"></i> alex55@gmail.com</h6>
+                        <h6 style="color: rgb(0, 0, 0);" ><i class="fa fa-phone"></i> 9784563212</h6>
+                        <h6 style="color: rgb(0, 0, 0);" ><i class="fa fa-location"></i> Alappuzha, Kerala</h6>
                     </div>
                     
                 </div>
                 <div class="row">
                     <div class="box mt-2 mb-2" style="text-align:justify;">
-                        <h4 style="color: rgb(0, 140, 114);" >Resume</h4>
-                        <h5 style="color: rgb(0, 0, 0);" ><i class="fa fa-file"></i> Alexjohnson_resume.pdf</h5>
+                        <h5 style="color: rgb(0, 140, 114);" >Resume</h5>
+                        <h6 style="color: rgb(0, 0, 0);" ><i class="fa fa-file"></i> Alexjohnson_resume.pdf</h6>
                         
                     </div>
                     
                 </div>
-                <div class="row mt-5">
-                    <a href="{% url 'editprofile' %}"><button type="button" class="btn sp mb-5" style="color: rgb(0, 140, 114);border: 1px solid rgb(0, 140, 114);">Edit</button></a>
+                <div class="row">
+                  <div class="box mt-2 mb-2" style="text-align:justify;">
+                    <h5 style="color: rgb(0, 140, 114);" >Qualifications</h5>
+                    <h6 style="color: rgb(0, 0, 0);" ><i class="fa fa-graduation-cap"></i> B-Tech Computer Science</h6>
+                      
+                  </div>
+                  
+                </div>
+                <div class="row">
+                  <div class="box mt-2 mb-2" style="text-align:justify;">
+                    <h5 style="color: rgb(0, 140, 114);" >Job preferences</h5>
+                    <h6 style="color: rgb(0, 0, 0);" ><i class="fa fa-user"></i> Job Title: Python/Django Developer</h6>
+                    <h6 style="color: rgb(0, 0, 0);" ><i class="fa fa-briefcase"></i> Job Types: Full Time</h6>
+                    <h6 style="color: rgb(0, 0, 0);" ><i class="fa fa-location"></i> Relocation: Willing to relocate anywhere</h6>
+                      
+                  </div>
+                  
+                </div>
+                <div class="row mt-3 ">
+                    <a href="{% url 'editprofile' %}"><button type="button" class="btn sp mb-4 btn-sm w-25 " style="color: rgb(0, 140, 114);border: 1px solid rgb(0, 140, 114);">Edit</button></a>
                 </div>
             </div>
             <div class="col-lg-3"></div>
