--- a/jobapp/templates/Jobseeker/alljobs.html
+++ b/jobapp/templates/Jobseeker/alljobs.html
@@ -247,9 +247,12 @@ All Jobs
       <div class="col-lg-3 col-md-3">
         <h5 class="text-title" style="color: rgb(0, 0, 0);margin-top: 50px;">Contact</h5>
         <ul>
-          <li style="color: rgb(0, 0, 0);"><a href="#" style="color: rgb(0, 0, 0);text-decoration: none;"><i class="bi bi-geo m-2"></i>Banglore,India</a></li>
-          <li style="color: rgb(0, 0, 0);"><a href="#" style="color: rgb(0, 0, 0);text-decoration: none;"><i class="bi bi-telephone m-2"></i>0481-0772255</a></li>
+          <li style="color: rgb(0, 0, 0);"><a href="#" style="color: rgb(0, 0, 0);text-decoration: none;">1st Floor - Thapasya Building
+            Kakkanad, Cochin</a></li>
+          <li style="color: rgb(0, 0, 0);"><a href="#" style="color: rgb(0, 0, 0);text-decoration: none;">Phone: +91 974 663 2202</a></li>
+          <li style="color: rgb(0, 0, 0);"><a href="#" style="color: rgb(0, 0, 0);text-decoration: none;">Email: Info@Altostechnologies.In</a></li>
           <li style="color: rgb(0, 0, 0);"><a href="#" style="color: rgb(0, 0, 0);text-decoration: none;"><i class="bi bi-instagram m-2"></i><i class="bi bi-facebook m-2"></i><i class="bi bi-twitter m-2"></i><i class="bi bi-linkedin m-2"></i></a></li>
+
         </ul>
       </div>
       <div class="col-lg-3 col-md-3">
