--- a/jobapp/templates/base.html
+++ b/jobapp/templates/base.html
@@ -15,7 +15,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <style>
         body{
-            background-image: url("{% static 'images/bg4.webp' %}");
+            background-image: url("{% static 'images/bg7.jpg' %}");
             background-repeat: no-repeat;
             background-size: cover;
             height: 100vh;
